--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 
+/*
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -30,4 +31,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+*/
+
+h1{
+  font-family: 'Bigelow Rules';
+  font-size: 72px;
+  color:#0ccac4;
 }
